--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         <p id="mensaje"></p>
         <img id="imagen" src="" alt="">
     </div>
+
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1940309467916355"
+     crossorigin="anonymous"></script>
     <script src="switch.js"></script> 
 </body>
 </html>
